// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalContent withStyles should render correctly 1`] = `
<JssProvider
  generateClassName={[Function]}
>
  <HvProvider
    changeTheme={[Function]}
    router={null}
    theme={null}
    uiKitTheme="dawn"
  >
    <WithStyles(ModalTitle)>
      Modal Content
    </WithStyles(ModalTitle)>
  </HvProvider>
</JssProvider>
`;

exports[`ModalTitle Component allows external props to be added 1`] = `
<JssProvider
  generateClassName={[Function]}
>
  <HvProvider
    changeTheme={[Function]}
    router={null}
    theme={null}
    uiKitTheme="dawn"
  >
    <ModalTitle
      className=""
      classes={Object {}}
      customIcon={null}
      disableTypography={true}
      showIcon={true}
      variant="default"
    >
      Modal Title
    </ModalTitle>
  </HvProvider>
</JssProvider>
`;

exports[`ModalTitle Component allows external styles to be added 1`] = `
<JssProvider
  generateClassName={[Function]}
>
  <HvProvider
    changeTheme={[Function]}
    router={null}
    theme={null}
    uiKitTheme="dawn"
  >
    <ModalTitle
      className=""
      classes={
        Object {
          "root": "testClassRoot",
        }
      }
      customIcon={null}
      showIcon={true}
      variant="default"
    >
      Modal Content
    </ModalTitle>
  </HvProvider>
</JssProvider>
`;

exports[`ModalTitle Component should render correctly if opened 1`] = `
<JssProvider
  generateClassName={[Function]}
>
  <HvProvider
    changeTheme={[Function]}
    router={null}
    theme={null}
    uiKitTheme="dawn"
  >
    <ModalTitle
      className=""
      classes={Object {}}
      customIcon={null}
      showIcon={true}
      variant="default"
    >
      Modal Content
    </ModalTitle>
  </HvProvider>
</JssProvider>
`;
